Update 프로그래핑 문법과 로직 (11.18).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
@@ -225,18 +225,17 @@ PARAMETERS: pa_small TYPE I, pa_big TYPE I.
 CONSTANTS: gc_const TYPE I VALUE 3.
 
 IF ( ( pa_small IS INITIAL ) OR ( pa_big IS INITIAL ) ).
-  MESSAGE '초기값에러'(INI) TYPE 'E'.
+  MESSAGE TEXT-001 TYPE 'E'.
 ENDIF.
 
 IF ( pa_big < pa_small ).
-  MESSAGE '사이즈에러'(siz) TYPE 'E'.
+  MESSAGE TEXT-002 TYPE 'E'.
 ENDIF.
 
 DO.
   IF ( pa_small > pa_big ).
     EXIT.
-  ENDIF.
-  IF ( pa_small MOD gc_const = 0 ).
+  ELSEIF ( pa_small MOD gc_const = 0 ).
     WRITE / pa_small.
   ENDIF.
   pa_small = pa_small + 1.
