Update 프로그래핑 문법과 로직 (11.18).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
@@ -228,7 +228,7 @@ IF ( ( pa_small IS INITIAL ) OR ( pa_big IS INITIAL ) ).
   MESSAGE TEXT-001 TYPE 'E'.
 ENDIF.
 
-IF ( pa_big < pa_small ).
+IF ( pa_big <= pa_small ).
   MESSAGE TEXT-002 TYPE 'E'.
 ENDIF.
 
