Update 프로그래핑 문법과 로직 (11.18).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
@@ -185,7 +185,21 @@ ENDLOOP.
 ---
 
 # ABAP Message Class (SE91) & 메시지 타입 정리
+### 1. Message Class (SE91)
+- 메시지를 따로 관리하는 저장소
+- 메시지 문구는 SE91에서 관리되며, 프로그램/화면/함수 등 어디서든 재사용 가능
+</br>
 
+## 🟦 2. 메시지 타입 정리
+
+| 타입 | 이름 | 동작 방식 | 프로그램 흐름 |
+|------|------|-----------|----------------|
+| **I** | Information | 정보 메시지 팝업 표시 | 계속 실행됨 |
+| **S** | Success | 성공 메시지, 상태바(Status Bar)에 표시 | 계속 실행됨 |
+| **W** | Warning | 경고 메시지 → 사용자 입력 중단, 다시 입력 필요 | SELECTION-SCREEN 단계에서 뒤로 돌아감 |
+| **E** | Error | 에러 메시지 → 팝업 표시 | 해당 이벤트(예: AT SELECTION-SCREEN) 중단 |
+| **A** | Abort | 비정상 종료 메시지 | 프로그램 즉시 종료 |
+| **X** | Exception | Short Dump 강제 발생 | 프로그램 비정상 종료 (Dump 생성) |
 ---
 
 </br>
