Update 프로그래핑 문법과 로직 (11.18).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
@@ -189,6 +189,7 @@ ENDLOOP.
 # ABAP Message Class (SE91) & 메시지 타입 정리
 ### 1. Message Class (SE91)
 - 메시지를 따로 관리하는 저장소
+- - 프로그램에서 `MESSAGE <msg_id> TYPE <type>` 또는 `MESSAGE ID 'ZMSG' TYPE 'E' NUMBER 001 WITH ...` 형태로 호출
 - 메시지 문구는 SE91에서 관리되며, 프로그램/화면/함수 등 어디서든 재사용 가능
 </br>
 
