Update 프로그래핑 문법과 로직 (11.18).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
@@ -187,13 +187,13 @@ ENDLOOP.
 </br>
 
 # ABAP Message Class (SE91) & 메시지 타입 정리
-### 1. Message Class (SE91)
-- 메시지를 따로 관리하는 저장소
-- 프로그램에서 `MESSAGE <msg_id> TYPE <type>` 또는 `MESSAGE ID 'ZMSG' TYPE 'E' NUMBER 001 WITH ...` 형태로 호출
-- 메시지 문구는 SE91에서 관리되며, 프로그램/화면/함수 등 어디서든 재사용 가능
+### 1) Message Class (SE91)
+- 메시지를 번호로 관리하는 저장소
+- 메시지는 `&` 로 변수 값을 받을 수 있음
+- 다국어(번역) 지원 → SAP 로그인 언어에 따라 자동으로 해당 언어 메시지 표시됨
 </br>
 
-### 2. 메시지 타입 정리
+### 2) 메시지 타입 정리
 
 | 타입 | 이름 | 동작 | 상세 설명 |
 |------|------|------|------------|
@@ -203,6 +203,42 @@ ENDLOOP.
 | **E** | Error | **하단 상태바에 빨간색 에러 메시지 표시 후 처리 중단** | AT SELECTION-SCREEN에서는 입력 화면으로 돌아감. 프로그램 실행 중에는 현재 이벤트 종료 |
 | **A** | Abort | 비정상 종료 | 메시지 출력 후 프로그램 즉시 종료 |
 | **X** | Exception | Short Dump 발생 | 시스템 덤프 생성(SAP 오류 강제 발생) |
+</br>
+
+### 3) MESSAGE-ID 미사용
+- <메시지클래스> 반드시 명시해야 함
+- WITH 뒤에 메시지의 & 자리에 들어갈 값 지정
+- 최대 4개까지 가능 → &1, &2, &3, &4 또는 단순 & 순서대로
+```abap
+MESSAGE <type><번호>(<메시지클래스>) WITH 값1 값2 ...
+```
+```abap
+REPORT ZPROGB03_0006.
+
+PARAMETERS: pa_name TYPE string.
+CONSTANTS: gc_const TYPE string VALUE 'CODE'.
+MESSAGE i002(ZMCB03) WITH pa_name gc_const.
+```
+</br>
+
+### 4) MESSAGE-ID 사용
+- 프로그램 가장 위( REPORT 문 뒤 ) 선언
+- 메시지 호출 시 클래스 이름 생략 가능
+```abap
+REPORT <프로그램명> MESSAGE-ID <메시지클래스>.
+```
+```abap
+REPORT ZPROGB03_0006 MESSAGE-ID ZMCB03.          " MESSAGE-ID 사용
+
+PARAMETERS: pa_name TYPE string.
+CONSTANTS: gc_const TYPE string VALUE 'CODE'.
+MESSAGE i002 WITH pa_name gc_const.              " 생략
+```
+
+</br>
+</br>
+
+---
 
 </br>
 
