Update 프로그래핑 문법과 로직 (11.18).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
@@ -234,6 +234,24 @@ PARAMETERS: pa_name TYPE string.
 CONSTANTS: gc_const TYPE string VALUE 'CODE'.
 MESSAGE i002 WITH pa_name gc_const.              " 생략
 ```
+</br>
+</br>
+
+---
+</br>
+
+## 디버깅
+1. 소스코드에 BREAK-POINT. 키워드
+2. 커멘드필드창에 /h 입력
+3. 소스코드의 특정 라인 선택
+</br>
+
+### 디버깅 창에서 application toolbar의 버튼 4개
+
+1. F5 한줄씩 실행 (메서드 안쪽까지 들어감)
+2. F6 함수 블럭을 넘기고 다음 라인 실행. 함수 내부에서 실행 시 F5와 같이 동작함.
+3. F7 함수 블럭 안에서, 메인 소스의 현재 위치 바로 다음줄로 이동
+4. F8 다음 Break Point로 이동
 
 </br>
 </br>
