Update 프로그래핑 문법과 로직 (11.18).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
@@ -317,3 +317,32 @@ DO.
   pa_small = pa_small + 1.
 ENDDO.
 ```
+</br>
+
+- 실습 3
+```abap
+PARAMETERS: pa_int1 TYPE I,
+            pa_int2 TYPE I,
+            pa_op TYPE C.
+
+DATA gv_result TYPE P LENGTH 16 DECIMALS 2.
+
+
+CASE pa_op.
+  WHEN '+'.
+    gv_result = pa_int1 + pa_int2.
+  WHEN '-'.
+    gv_result = pa_int1 - pa_int2.
+  WHEN '*'.
+    gv_result = pa_int1 * pa_int2.
+  WHEN '/'.
+    IF ( pa_int1 = 0 OR pa_int2 = 0 ).
+      MESSAGE '0을 나눌 순 없습니다.' TYPE 'E'.
+    ENDIF.
+    gv_result = pa_int1 / pa_int2.
+  WHEN OTHERS.
+    MESSAGE '타당하지 않는 연산자입니다.' TYPE 'E'.
+ENDCASE.
+
+WRITE: gv_result.
+```
