Update 프로그래핑 문법과 로직 (11.18).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.18).md
@@ -188,8 +188,9 @@ ENDLOOP.
 
 # ABAP Message Class (SE91) & 메시지 타입 정리
 ### 1) Message Class (SE91)
-- 메시지를 번호로 관리하는 저장소
-- 메시지는 `&` 로 변수 값을 받을 수 있음
+- 메시지를 번호로 관리하는 저장소. 이름은 Z나 Y로 시작.
+- WITH 뒤에 메시지의 & 자리에 들어갈 값 지정
+- 메시지는 `&` 로 변수 값을 받을 수 있음. 최대 4개까지 가능 → &1, &2, &3, &4 또는 단순 & 순서대로.
 - 다국어(번역) 지원 → SAP 로그인 언어에 따라 자동으로 해당 언어 메시지 표시됨
 </br>
 
@@ -207,8 +208,6 @@ ENDLOOP.
 
 ### 3) MESSAGE-ID 미사용
 - <메시지클래스> 반드시 명시해야 함
-- WITH 뒤에 메시지의 & 자리에 들어갈 값 지정
-- 최대 4개까지 가능 → &1, &2, &3, &4 또는 단순 & 순서대로
 ```abap
 MESSAGE <type><번호>(<메시지클래스>) WITH 값1 값2 ...
 ```
