Update 프로그래핑 문법과 로직 (11.19).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -1,1 +1,17 @@
+## < 실습 코드 >
+- 실습 1
+```abap
+PARAMETERS pa_num TYPE i.
+DATA gv_result TYPE I.
 
+IF ( pa_num <= 1 ).
+  MESSAGE '2 이상을 입력하세요' TYPE 'E'.
+ELSEIF ( pa_num >= 10 ).
+  MESSAGE '9 이하를 입력하세요' TYPE 'E'.
+ELSE.
+  DO 9 TIMES.
+    gv_result = pa_num * sy-index.
+    WRITE:/ pa_num, ' * ', sy-index, ' = ', gv_result.
+  ENDDO.
+ENDIF.
+```
