--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -1,3 +1,11 @@
+### 1) ULINE
+
+
+</br>
+
+---
+</br>
+
 ## < 실습 코드 >
 - 실습 1
 ```abap
@@ -13,5 +21,27 @@ ELSE.
     gv_result = pa_num * sy-index.
     WRITE:/ pa_num, ' * ', sy-index, ' = ', gv_result.
   ENDDO.
+ENDIF.
+```
+```abap
+PARAMETERS: pa_num TYPE I.
+DATA: gv_result TYPE I.
+
+IF pa_num < 2 OR pa_num > 9.
+  MESSAGE '2 이상 9 이하의 숫자를 입력하세요.' TYPE 'I'.
+  ELSE.
+    WRITE: 5(10) pa_num, '단 :'.
+    ULINE.
+
+    DO 9 TIMES.
+      gv_result = pa_num * sy-index.
+      WRITE:
+        10(2) pa_num,
+        12(2) '*',
+        14(2) sy-index,
+        16(2) '=',
+        18(2) gv_result.
+      NEW-LINE.
+    ENDDO.
 ENDIF.
 ```
