Update 프로그래핑 문법과 로직 (11.19).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -1,6 +1,18 @@
 ### 1) ULINE
+- 화면에 —————(라인) 을 출력하는 명령
+- WRITE 없이 단독으로 사용 가능
+```abap
+ULINE.
+```
+</br>
 
-
+### 2) 2) WRITE: 숫자(숫자) → 출력 위치 + 필드 길이 지정
+```abap
+WRITE: position(length) <값>.
+```
+```abap
+WRITE: 5(10) pa_num, '단 :'.    " 5(10) → 화면 5번째 칼럼부터 10칸 공간 확보
+```
 </br>
 
 ---
