--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -1,4 +1,5 @@
-### 1) ULINE
+### < ABAP 추가적인 문법 >
+**1) ULINE**
 - 화면에 —————(라인) 을 출력하는 명령
 - WRITE 없이 단독으로 사용 가능
 ```abap
@@ -6,7 +7,7 @@ ULINE.
 ```
 </br>
 
-### 2) 2) WRITE: 숫자(숫자) → 출력 위치 + 필드 길이 지정
+**2) WRITE: 숫자(숫자) → 출력 위치 + 필드 길이 지정**
 ```abap
 WRITE: position(length) <값>.
 ```
