Update 프로그래핑 문법과 로직 (11.19).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -1,4 +1,11 @@
 # ABAP 모듈화(Modularization)
+- 코드를 따로 만들어 놓고 필요할 때 호출해서 쓰는 것
+- 가독성 ↑, 재사용성 ↑, 유지보수 ↑
+</br>
+
+### Local Modularization (로컬 모듈화)
+
+</br>
 
 ### < ABAP 추가적인 문법 >
 </br>
