Update 프로그래핑 문법과 로직 (11.19).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -10,6 +10,11 @@
 ### 2) Global Modularization (전역 모듈화)
 - SAP 전체 프로그램이 공용으로 사용 가능, 어디서든 호출 가능, 재사용성 매우 좋음.
 - Function Group / Function Module, Global Class (SE24) / Method
+</br>
+
+### 데이터 캡슐화
+- 객체 내부 데이터를 숨기고(PRIVATE) 외부에서는 메서드(PUBLIC)로만 접근하도록 제한하는 것
+- 데이터 보호 + 잘못된 접근 방지를 위한 객체지향의 기본 원칙
 
 </br>
 </br>
