Update 프로그래핑 문법과 로직 (11.19).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -3,11 +3,11 @@
 - 가독성 ↑, 재사용성 ↑, 유지보수 ↑
 </br>
 
-### 1) Local Modularization (로컬 모듈화)
+**1) Local Modularization (로컬 모듈화)**
 - 현재 프로그램 안에서만 사용 가능, 재사용성 낮음
 - Subroutine (FORM), Local Class
 
-### 2) Global Modularization (전역 모듈화)
+**2) Global Modularization (전역 모듈화)**
 - SAP 전체 프로그램이 공용으로 사용 가능, 어디서든 호출 가능, 재사용성 매우 좋음.
 - Function Group / Function Module, Global Class (SE24) / Method
 </br>
