Update 프로그래핑 문법과 로직 (11.19).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -17,7 +17,17 @@
 - 데이터 보호 + 잘못된 접근 방지를 위한 객체지향의 기본 원칙
 </br>
 
-**1) CALL FUNCTION**
+**1) Subroutine (FORM … ENDFORM)**
+- 로컬 모듈화 방식
+- 같은 프로그램 안에서만 호출 가능
+```abap
+PERFORM <subroutine_name> [USING <param1> <param2> ...].    " 호출부
+
+FORM <subroutine_name> [USING <param1> <param2> ...].       " 선언부
+  " 처리 로직
+ENDFORM.
+```
+
 
 </br>
 </br>
