Update 프로그래핑 문법과 로직 (11.19).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -20,6 +20,7 @@
 **1) Subroutine (FORM … ENDFORM)**
 - 로컬 모듈화 방식
 - 같은 프로그램 안에서만 호출 가능
+- 서브루틴에서는 글로벌 변수 사용 가능하지만, 최소화해 독립적·재사용 가능하게 작성
 ```abap
 PERFORM <subroutine_name> [USING <param1> <param2> ...].    " 호출부
 
@@ -27,6 +28,7 @@ FORM <subroutine_name> [USING <param1> <param2> ...].       " 선언부
   " 처리 로직
 ENDFORM.
 ```
+</br>
 
 
 </br>
