Update 프로그래핑 문법과 로직 (11.19).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -18,10 +18,15 @@
 </br>
 
 **1) Subroutine (FORM … ENDFORM)**
-- 로컬 모듈화 방식
-- 같은 프로그램 안에서만 호출 가능
-- 서브루틴에서는 글로벌 변수 사용 가능하지만, 최소화해 독립적·재사용 가능하게 작성
-- `Formal Parameter` : 서브루틴/함수 선언 시 정의되는 변수, `Actual Parameter` : 호출 시 전달되는 값
+- 로컬 모듈화 방식: 같은 프로그램 안에서만 호출 가능
+- 글로벌 변수 사용 가능하지만 최소화하여 독립적·재사용 가능하게 작성
+- 파라미터
+  - `Formal Parameter` : 서브루틴/함수 선언 시 정의되는 변수
+  - `Actual Parameter` : 호출 시 전달되는 값
+- 호출 방식
+  - `CALL BY VALUE` : actual parameter의 값만 전달
+  - `CALL BY VALUE AND RESULT` : 값 전달 받고, 결과값 반환
+  - `CALL BY REFERENCE` : 메모리 주소 공유
 ```abap
 PERFORM <subroutine_name> [USING <param1> <param2> ...].    " 호출부
 
