Update 프로그래핑 문법과 로직 (11.19).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -29,6 +29,8 @@
   - `CALL BY VALUE` : actual parameter의 값만 전달
   - `CALL BY VALUE AND RESULT` : 값 전달 받고, 결과값 반환
   - `CALL BY REFERENCE` : 메모리 주소 공유
+ - `USING VALUE(...)` : Call by Value 방식, 값만 전달
+ - `CHANGING` : Call by Reference 방식, 값이 수정되면 호출부에도 반영
 ```abap
 PERFORM <subroutine_name> [USING <param1> <param2> ...].    " 호출부
 
