Update 프로그래핑 문법과 로직 (11.19).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -32,10 +32,20 @@
  - `USING VALUE(...)` : Call by Value 방식, 값만 전달
  - `CHANGING` : Call by Reference 방식, 값이 수정되면 호출부에도 반영
 ```abap
-PERFORM <subroutine_name> [USING <param1> <param2> ...].    " 호출부
+* -------------------------------
+* Subroutine 호출부
+* -------------------------------
+PERFORM <subroutine_name> 
+        USING <param1> VALUE <param2> 
+        CHANGING <param3> <param4>.
 
-FORM <subroutine_name> [USING <param1> <param2> ...].       " 선언부
-  " 처리 로직
+* -------------------------------
+* Subroutine 선언부
+* -------------------------------
+FORM <subroutine_name> 
+     USING VALUE(<param1>) VALUE(<param2>) 
+     CHANGING <param3> <param4>.
+  " 처리 로직 작성
 ENDFORM.
 ```
 </br>
