--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -26,9 +26,9 @@
   - `Formal Parameter` : 서브루틴/함수 선언 시 정의되는 변수
   - `Actual Parameter` : 호출 시 전달되는 값
 - 호출 방식
-  - `CALL BY VALUE` : actual parameter의 값만 전달
-  - `CALL BY VALUE AND RESULT` : 값 전달 받고, 결과값 반환
-  - `CALL BY REFERENCE` : 메모리 주소 공유
+  - `CALL BY VALUE` : 호출 시 값만 복사해서 전달, 호출부 값은 바뀌지 않음.
+  - `CALL BY VALUE AND RESULT` : 값 전달 후, 서브루틴에서 수정된 값을 호출부로 반환.
+  - `CALL BY REFERENCE` : 변수의 메모리 주소를 공유, 서브루틴에서 바꾸면 호출부 값도 바로 바뀜.
  - `USING VALUE(...)` : Call by Value 방식, 값만 전달
  - `CHANGING` : Call by Reference 방식, 값이 수정되면 호출부에도 반영
 ```abap
