Update 프로그래핑 문법과 로직 (11.19).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -48,12 +48,13 @@ ENDFORM.
 </br>
 
 **< ABAP 서브루틴 파라미터 전달 방식 정리 >**
-| 키워드   | VALUE 사용 여부 | Call 방식           | 설명                               | 호출부 변수에 영향                     |
-|----------|----------------|------------------|----------------------------------|------------------------------------|
-| USING    | VALUE()         | Call by Value       | 값을 복사해서 전달                   | 서브루틴에서 바꿔도 호출부 변수는 변경되지 않음 |
-| USING    | 없음            | Call by Reference   | 참조 전달 (주소 전달)               | 서브루틴에서 바꾸면 호출부 변수도 변경됨 |
-| CHANGING | VALUE()         | Call by Reference   | 값 전달 + 수정 가능                 | 서브루틴에서 바꾸면 호출부 변수도 변경됨 |
-| CHANGING | 없음            | Call by Reference   | 값 전달 + 수정 가능                 | 서브루틴에서 바꾸면 호출부 변수도 변경됨 |
+- USING / CHANGING 키워드와 VALUE() 사용 여부에 따른 호출 방식 표
+| 키워드    | VALUE() 사용 여부 | 호출 방식                  | 특징                       | 호출부 반영 여부                |
+|-----------|----------------|---------------------------|----------------------------|-------------------------------|
+| USING     | VALUE()         | Call by Value             | 값만 전달                  | 호출부 변수 변경 안됨          |
+| USING     | 없음            | Call by Reference         | 값 전달 + 수정 가능        | 호출부 변수 변경됨             |
+| CHANGING  | VALUE()         | Call by Value and Result  | 값 전달 + 결과 반환        | 호출부 변수 변경됨             |
+| CHANGING  | 없음            | Call by Reference         | 값 전달 + 수정 가능        | 호출부 변수 변경됨             |
 
 </br>
 </br>
