Update 프로그래핑 문법과 로직 (11.19).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -56,7 +56,10 @@ ENDFORM.
 | USING     | 없음            | Call by Reference         | 값 전달 + 수정 가능        | 호출부 변수 변경됨             |
 | CHANGING  | VALUE()         | Call by Value and Result  | 값 전달 + 결과 반환        | 호출부 변수 변경됨             |
 | CHANGING  | 없음            | Call by Reference         | 값 전달 + 수정 가능        | 호출부 변수 변경됨             |
-
+- `USING VALUE(fa)` → 값만 전달, 호출부 변수 변경 안됨  
+- `USING fa` → 값 전달 + 호출부 변수 공유  
+- `CHANGING VALUE(fd)` → 값 전달 후 수정 결과 반환  
+- `CHANGING fd` → 호출부 변수 공유, 바로 수정
 </br>
 </br>
 </br>
