Update 프로그래핑 문법과 로직 (11.19).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -60,6 +60,30 @@ ENDFORM.
 - `USING fa` → 값 전달 + 호출부 변수 공유  
 - `CHANGING VALUE(fd)` → 값 전달 후 수정 결과 반환  
 - `CHANGING fd` → 호출부 변수 공유, 바로 수정
+```abap
+DATA: gv_a TYPE C VALUE 'A',
+      gv_b TYPE C VALUE 'B',
+      gv_c TYPE C VALUE 'C',
+      gv_d TYPE C VALUE 'D'.
+
+PERFORM test USING gv_a gv_b
+             CHANGING gv_c gv_d.
+
+NEW-LINE.
+WRITE: 'PERFORM IN : ', gv_a, gv_b, gv_c, gv_d.
+
+FORM test  USING    VALUE(fa)
+                    fb
+           CHANGING VALUE(fc)
+                    fd.
+  fa = 'W'.
+  fb = 'X'.
+  fc = 'Y'.
+  fd = 'Z'.
+  WRITE: 'PERFORM END : ', fa, fb, fc, fd.
+
+ENDFORM.
+```
 </br>
 </br>
 </br>
