--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -52,7 +52,7 @@ ENDFORM.
 ```
 </br>
 
-**< ABAP 서브루틴 파라미터 전달 방식 정리 >**
+### < ABAP 서브루틴 파라미터 전달 방식 정리 >
 - USING / CHANGING 키워드와 VALUE() 사용 여부에 따른 호출 방식 표
 
 | 키워드    | VALUE() 사용 여부 | 호출 방식                  | 특징                       | 호출부 반영 여부                |
