Update 프로그래핑 문법과 로직 (11.19).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -159,3 +159,37 @@ IF pa_num < 2 OR pa_num > 9.
     ENDDO.
 ENDIF.
 ```
+</br>
+
+- 실습 2
+```abap
+PARAMETERS: gv_num1 TYPE I,
+            gv_op TYPE C LENGTH 1,
+            gv_num2 TYPE I.
+
+DATA: gv_result TYPE I.
+
+PERFORM get_compute USING gv_num1 gv_num2 gv_op
+                    CHANGING gv_result.
+
+WRITE: gv_result.
+
+* 서브루틴 정의
+FORM get_compute using value(p_pa_num1)
+                       value(p_pa_num2)
+                       value(p_pa_op)
+                 CHANGING VALUE(p_pa_result).
+  CASE p_pa_op.
+    WHEN '+'.
+      p_pa_result = p_pa_num1 + p_pa_num2.
+    WHEN '-'.
+      p_pa_result = p_pa_num1 - p_pa_num2.
+    WHEN '*'.
+      p_pa_result = p_pa_num1 * p_pa_num2.
+    WHEN '/'.
+      p_pa_result = p_pa_num1 / p_pa_num2.
+    WHEN OTHERS.
+  ENDCASE.
+
+ENDFORM.
+```
