Update 프로그래핑 문법과 로직 (11.19).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -163,11 +163,11 @@ ENDIF.
 
 - 실습 2
 ```abap
-PARAMETERS: gv_num1 TYPE I,
-            gv_op TYPE C LENGTH 1,
-            gv_num2 TYPE I.
+PARAMETERS: gv_num1 TYPE i,
+            gv_op   TYPE c LENGTH 1,
+            gv_num2 TYPE i.
 
-DATA: gv_result TYPE I.
+DATA: gv_result TYPE i.
 
 PERFORM get_compute USING gv_num1 gv_num2 gv_op
                     CHANGING gv_result.
@@ -175,9 +175,9 @@ PERFORM get_compute USING gv_num1 gv_num2 gv_op
 WRITE: gv_result.
 
 * 서브루틴 정의
-FORM get_compute using value(p_pa_num1)
-                       value(p_pa_num2)
-                       value(p_pa_op)
+FORM get_compute USING VALUE(p_pa_num1)
+                       VALUE(p_pa_num2)
+                       VALUE(p_pa_op)
                  CHANGING VALUE(p_pa_result).
   CASE p_pa_op.
     WHEN '+'.
