Update 프로그래핑 문법과 로직 (11.19).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -193,3 +193,44 @@ FORM get_compute USING VALUE(p_pa_num1)
 
 ENDFORM.
 ```
+</br>
+
+- 실습 3
+```abap
+PARAMETERS: pa_int1 TYPE i,
+            pa_int2 TYPE i,
+            pa_op   TYPE c.
+
+DATA gv_result TYPE p LENGTH 16 DECIMALS 2.
+
+
+CASE pa_op.
+  WHEN '+'.
+    gv_result = pa_int1 + pa_int2.
+  WHEN '-'.
+    gv_result = pa_int1 - pa_int2.
+  WHEN '*'.
+    gv_result = pa_int1 * pa_int2.
+  WHEN '/'.
+    IF ( pa_int1 = 0 OR pa_int2 = 0 ).
+      MESSAGE '0을 나눌 순 없습니다.' TYPE 'E'.
+    ENDIF.
+    gv_result = pa_int1 / pa_int2.
+  WHEN '%'.
+    PERFORM CALC_PERCENTAGE USING pa_int1 pa_int2 CHANGING gv_result.
+  WHEN OTHERS.
+    MESSAGE '타당하지 않는 연산자입니다.' TYPE 'E'.
+ENDCASE.
+
+WRITE: gv_result.
+
+FORM CALC_PERCENTAGE USING VALUE(PV_ACT) TYPE I 
+                           VALUE(PV_MAX) TYPE I
+                     CHANGING VALUE(CV_RESULT).
+  IF ( PV_MAX = 0 ).
+    MESSAGE '0이 들어올 수 없습니다.' TYPE 'E'.
+  ELSE.
+    CV_RESULT = ( PV_ACT / PV_MAX ) * 100.
+  ENDIF.
+ENDFORM.
+```
