Update 프로그래핑 문법과 로직 (11.19).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -94,8 +94,10 @@ ENDFORM.
 </br>
 
 ### 2) Function Module (FM)
-
-### < Function Module 기본 개념 >
+- Function Module(FM) 은 Function Group(FG) 안에 소속됨.
+- Function Group = 하나의 프로그램처럼 동작.
+- FG 내부 변수들은 FG 안의 Function Module끼리만 접근 가능, 일반 ABAP 프로그램에서는 직접 접근 불가 → FM의 파라미터(interface)를 통해서만 값 전달·수정 가능.
+- 하나의 FG 안에는 여러 개의 Function Module이 들어갈 수 있음.
 </br>
 </br>
 
