Update 프로그래핑 문법과 로직 (11.19).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -100,6 +100,11 @@ ENDFORM.
 - FG 내부 변수들은 FG 안의 Function Module끼리만 접근 가능, 일반 ABAP 프로그램에서는 직접 접근 불가
   - FM의 파라미터(interface)를 통해서만 값 전달·수정 가능.
 - 하나의 FG 안에는 여러 개의 Function Module이 들어갈 수 있음.
+```abap
+* Function Module 호출
+
+CALL FUNCTION '<FUNCTION_MODULE_NAME>'.
+```
 </br>
 </br>
 
