Update 프로그래핑 문법과 로직 (11.19).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -106,6 +106,12 @@ ENDFORM.
 CALL FUNCTION '<FUNCTION_MODULE_NAME>'.
 ```
 </br>
+
+### < Function Module 파라미터 종류 (Interface) >
+- FM에서 파라미터 영역을 **Interface**라고 부름
+  - → 프로그램과 FM이 값을 주고받는 통로
+
+</br>
 </br>
 
 ---
