--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -109,7 +109,22 @@ CALL FUNCTION '<FUNCTION_MODULE_NAME>'.
 
 ### < Function Module 파라미터 종류 (Interface) >
 - FM에서 파라미터 영역을 **Interface**라고 부름
-  - → 프로그램과 FM이 값을 주고받는 통로
+  - 프로그램과 FM이 값을 주고받는 통로
+| 파라미터 종류 | 의미 |
+|---------------|------------------------------------------------|
+| **IMPORT**    | 프로그램 → FM 값 전달 |
+| **EXPORT**    | FM → 프로그램 값 반환 |
+| **CHANGING**  | 양방향 데이터 전달 (주고받기) |
+| **EXCEPTIONS**| 예외 처리 |
+</br>
+
+### < 프로그램 ↔ Function Module 파라미터 대응표 >
+- 프로그램이 **EXPORTING** 으로 보내면 FM에서는 반드시 **IMPORTING** 으로 받아야 함.
+| 프로그램에서 전달 | Function Module에서 받음 |
+|------------------|---------------------------|
+| **EXPORTING**    | **IMPORTING** |
+| **IMPORTING**    | **EXPORTING** |
+| **CHANGING**     | **CHANGING** |
 
 </br>
 </br>
