Update 프로그래핑 문법과 로직 (11.19).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -108,7 +108,14 @@ CALL FUNCTION '<FUNCTION_MODULE_NAME>'.
 </br>
 
 ### < Function Module 파라미터 >
-**Function Module 파라미터 종류 (Interface)**
+**1) Function Module 파라미터 옵션**
+- 1) OPTIONAL
+     - 체크하면 해당 파라미터를 전달하지 않아도 FM 호출 가능 (선택값)
+     - 체크하지 않으면 필수값, 반드시 전달해야 함
+- 2) Pass by Value / Reference
+</br>
+
+**2) Function Module 파라미터 종류 (Interface)**
 - FM에서 파라미터 영역을 **Interface**라고 부름
   - 프로그램과 FM이 값을 주고받는 통로
   
@@ -120,7 +127,7 @@ CALL FUNCTION '<FUNCTION_MODULE_NAME>'.
 | **EXCEPTIONS**| 예외 처리 |
 </br>
 
-**프로그램 ↔ Function Module 파라미터 대응표**
+**3) 프로그램 ↔ Function Module 파라미터 대응표**
 - 프로그램이 **EXPORTING** 으로 보내면 FM에서는 반드시 **IMPORTING** 으로 받아야 함.
 
 | 프로그램에서 전달 | Function Module에서 받음 |
