Update 프로그래핑 문법과 로직 (11.19).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -109,10 +109,10 @@ CALL FUNCTION '<FUNCTION_MODULE_NAME>'.
 
 ### < Function Module 파라미터 >
 **1) Function Module 파라미터 옵션**
-- 1) OPTIONAL
+1) OPTIONAL
      - 체크하면 해당 파라미터를 전달하지 않아도 FM 호출 가능 (선택값)
      - 체크하지 않으면 필수값, 반드시 전달해야 함
-- 2) Pass by Value / Reference
+2) Pass by Value / Reference
 </br>
 
 **2) Function Module 파라미터 종류 (Interface)**
