--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -115,8 +115,11 @@ CALL FUNCTION '<FUNCTION_MODULE_NAME>'.
      
 2) Pass by Value / Reference
    - Pass by Value (체크 O) : FM에 값만 전달, FM 내부에서 변경해도 호출부 변수는 영향 없음
+   - Pass by Reference (체크 X) : FM과 호출부 변수가 같은 메모리 주소를 공유, FM 내부 변경 시 호출부에도 반영
 
-Pass by Reference (체크 X) : FM과 호출부 변수가 같은 메모리 주소를 공유, FM 내부 변경 시 호출부에도 반영
+3) EXCEPTIONS (예외 처리)
+   - FM 실행 중 발생할 수 있는 오류 상황을 처리
+   - 호출부에서 특정 예외를 감지하고 대응 가능
 </br>
 
 **2) Function Module 파라미터 종류 (Interface)**
