Update 프로그래핑 문법과 로직 (11.19).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -142,6 +142,9 @@ CALL FUNCTION '<FUNCTION_MODULE_NAME>'.
 | **EXPORTING**    | **IMPORTING** |
 | **IMPORTING**    | **EXPORTING** |
 | **CHANGING**     | **CHANGING** |
+| **Tables**     | **Tables** |
+| **Exceptions**     | **Exceptions** |
+
 
 </br>
 </br>
