Update 프로그래핑 문법과 로직 (11.19).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -94,6 +94,7 @@ ENDFORM.
 </br>
 
 ### 2) Function Module (FM)
+- SE37 (Function Builder): SAP에서 Function Module을 생성, 수정, 테스트할 수 있는 트랜잭션 코드.
 - Function Module(FM) 은 Function Group(FG) 안에 소속됨.
 - Function Group = 하나의 프로그램처럼 동작.
   
