Update 프로그래핑 문법과 로직 (11.19).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -23,7 +23,7 @@
 
 ## 모듈화 기술 함수
 
-### 1) Subroutine (FORM … ENDFORM)
+## 1) Subroutine (FORM … ENDFORM)
 - 로컬 모듈화 방식: 같은 프로그램 안에서만 호출 가능
 - 글로벌 변수 사용 가능하지만 최소화하여 독립적·재사용 가능하게 작성
 
@@ -93,7 +93,7 @@ ENDFORM.
 </br>
 </br>
 
-### 2) Function Module (FM)
+## 2) Function Module (FM)
 - SE37 (Function Builder): SAP에서 Function Module을 생성, 수정, 테스트할 수 있는 트랜잭션 코드.
 - Function Module(FM) 은 Function Group(FG) 안에 소속됨.
 - Function Group = 하나의 프로그램처럼 동작.
@@ -148,6 +148,10 @@ CALL FUNCTION '<FUNCTION_MODULE_NAME>'.
 | **Tables**     | **Tables** |
 | **Exceptions**     | **Exceptions** |
 
+</br>
+</br>
+
+### < Function Module 선언 (SE37에서 생성) >
 
 </br>
 </br>
