Update 프로그래핑 문법과 로직 (11.19).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -23,7 +23,7 @@
 
 ## 모듈화 기술 함수
 
-## 1) Subroutine (FORM … ENDFORM)
+# 1) Subroutine (FORM … ENDFORM)
 - 로컬 모듈화 방식: 같은 프로그램 안에서만 호출 가능
 - 글로벌 변수 사용 가능하지만 최소화하여 독립적·재사용 가능하게 작성
 
