Update 프로그래핑 문법과 로직 (11.19).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -152,6 +152,49 @@ CALL FUNCTION '<FUNCTION_MODULE_NAME>'.
 </br>
 
 ### < Function Module 선언 (SE37에서 생성) >
+```abap
+FUNCTION <function_module_name>.
+*"----------------------------------------------------------------------
+*"*" Local Interface:
+*"  IMPORTING
+*"     VALUE(<import_param1>) TYPE <type>
+*"  EXPORTING
+*"     VALUE(<export_param1>) TYPE <type>
+*"  CHANGING
+*"     VALUE(<changing_param1>) TYPE <type>
+*"  EXCEPTIONS
+*"      <exception_name1> 1
+*"      <exception_name2> 2
+*"----------------------------------------------------------------------
+
+  " 처리 로직 작성
+  <export_param1> = <import_param1> + 10.
+
+ENDFUNCTION.
+```
+</br>
+
+### <Function Module 호출 (프로그램에서) >
+```abap
+DATA: lv_result TYPE i.
+
+CALL FUNCTION '<function_module_name>'
+  EXPORTING
+    <import_param1> = 5
+  IMPORTING
+    <export_param1> = lv_result
+  CHANGING
+    <changing_param1> = lv_result
+  EXCEPTIONS
+    <exception_name1> = 1
+    OTHERS = 2.
+
+IF sy-subrc <> 0.
+  WRITE: '예외 발생'.
+ELSE.
+  WRITE: / '결과: ', lv_result.
+ENDIF.
+```
 
 </br>
 </br>
