--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -34,6 +34,7 @@
   - `CALL BY VALUE` : 호출 시 값만 복사해서 전달, 호출부 값은 바뀌지 않음.
   - `CALL BY VALUE AND RESULT` : 값 전달 후, 서브루틴에서 수정된 값을 호출부로 반환.
   - `CALL BY REFERENCE` : 변수의 메모리 주소를 공유, 서브루틴에서 바꾸면 호출부 값도 바로 바뀜.
+- `USING`이나 `CHANGING` 파라미터에서 길이(LENGTH)를 지정하면 FORM 문법상 오류
 ```abap
 * -------------------------------
 * Subroutine 호출부
