Update 프로그래핑 문법과 로직 (11.20).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
@@ -1,4 +1,24 @@
 ## < ABAP 추가적인 문법 >
+### 1) CONCATENATE
+- 여러 문자열을 하나로 이어 붙임
+- `SEPARATED BY` → 문자열 사이에 넣을 구분자(공백, 콤마 등)
+```abap
+CONCATENATE <문자1> <문자2> <문자3> ... INTO <결과변수>
+             [SEPARATED BY <구분자>].
+```
+</br>
+
+### 2) sy-datum
+- 현재 시스템 날짜가 자동으로 들어 있는 SAP 시스템 필드
+```abap
+sy-datum  →  YYYYMMDD (8자리 날짜)
+```
+- `+숫자(숫자)` 는 문자열에서 원하는 위치(offset)와 길이(length)만큼 잘라오는 부분 문자열 표현
+- `<offset>` 위치부터 `<length>` 길이만큼 부분 문자열(substring) 을 잘라서 가져오는 문법
+```abap
+<변수>+<offset>(<length>)
+```
+</br>
 
 ---
 ## < 실습 코드 >
