Update 프로그래핑 문법과 로직 (11.20).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
@@ -6,6 +6,21 @@
 CONCATENATE <문자1> <문자2> <문자3> ... INTO <결과변수>
              [SEPARATED BY <구분자>].
 ```
+```abap
+DATA gv_result TYPE string.
+PERFORM getToday CHANGING gv_result.
+WRITE: gv_result.
+
+FORM getToday CHANGING VALUE(p_result).
+  CONCATENATE 
+      '오늘은'
+      sy-datum+0(4) '년'
+      sy-datum+4(2) '월'
+      sy-datum+6(2) '일입니다.'
+    INTO p_result
+    SEPARATED BY space.
+ENDFORM.
+```
 </br>
 
 ### 2) sy-datum
