Update 프로그래핑 문법과 로직 (11.20).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
@@ -1,5 +1,5 @@
 ## < ABAP 추가적인 문법 >
-### 1) CONCATENATE
+**1) CONCATENATE**
 - 여러 문자열을 하나로 이어 붙임
 - `SEPARATED BY` → 문자열 사이에 넣을 구분자(공백, 콤마 등)
 ```abap
@@ -23,7 +23,7 @@ ENDFORM.
 ```
 </br>
 
-### 2) sy-datum
+**2) sy-datum**
 - 현재 시스템 날짜가 자동으로 들어 있는 SAP 시스템 필드
 ```abap
 sy-datum  →  YYYYMMDD (8자리 날짜)
