Update 프로그래핑 문법과 로직 (11.20).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
@@ -12,13 +12,7 @@ PERFORM getToday CHANGING gv_result.
 WRITE: gv_result.
 
 FORM getToday CHANGING VALUE(p_result).
-  CONCATENATE 
-      '오늘은'
-      sy-datum+0(4) '년'
-      sy-datum+4(2) '월'
-      sy-datum+6(2) '일입니다.'
-    INTO p_result
-    SEPARATED BY space.
+  CONCATENATE '오늘은' sy-datum+0(4) '년' sy-datum+4(2) '월' sy-datum+6(2) '일 입니다' INTO p_result.
 ENDFORM.
 ```
 </br>
