Update 프로그래핑 문법과 로직 (11.20).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
@@ -6,6 +6,10 @@
 CONCATENATE <문자1> <문자2> <문자3> ... INTO <결과변수>
              [SEPARATED BY <구분자>].
 ```
+- CONCATENATE 의 INTO절에 RESPECTING BLANKS 추가 시, 빈칸을 허용함
+```abap
+CONCATENATE 문자1 문자2 문자3 INTO lv_result RESPECTING BLANKS.
+```
 ```abap
 DATA gv_result TYPE string.
 PERFORM getToday CHANGING gv_result.
