Update 프로그래핑 문법과 로직 (11.19).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -107,6 +107,29 @@ ENDFORM.
 
 CALL FUNCTION '<FUNCTION_MODULE_NAME>'.
 ```
+
+**RAISE**
+- Function Module 내부에서 예외(Exception)를 발생시킬 때 사용
+```abap
+" function module 에서
+
+FUNCTION zfm_test.
+
+  IF iv_carrid IS INITIAL.
+    RAISE invalid_carrid.
+  ENDIF.
+
+ENDFUNCTION.
+```
+```abap
+" 프로그램에서
+
+CALL FUNCTION 'ZFM_TEST'
+  EXPORTING
+    iv_carrid = ''
+  EXCEPTIONS
+    invalid_carrid = 1.
+```
 </br>
 
 ### < Function Module 파라미터 >
