Update 프로그래핑 문법과 로직 (11.20).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
@@ -42,6 +42,13 @@ sy-datum  →  YYYYMMDD (8자리 날짜)
 ---
 ## < 실습 코드 >
 - 실습 1
-- 
-sy-datum
-- 오늘 날짜 출력
+- FROM 함수 이용한 날짜 출력
+```abap
+DATA gv_result TYPE string.
+PERFORM getToday CHANGING gv_result.
+WRITE: gv_result.
+
+FORM getToday CHANGING VALUE(p_result).
+  CONCATENATE '오늘은' sy-datum+0(4) '년' sy-datum+4(2) '월' sy-datum+6(2) '일 입니다' INTO p_result.
+ENDFORM.
+```
