Update 프로그래핑 문법과 로직 (11.20).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
@@ -52,3 +52,10 @@ FORM getToday CHANGING VALUE(p_result).
   CONCATENATE '오늘은' sy-datum+0(4) '년' sy-datum+4(2) '월' sy-datum+6(2) '일 입니다' INTO p_result.
 ENDFORM.
 ```
+</br>
+</br>
+
+- 실습 2
+- function group과 function module 이용
+**1) function group 생성**
+  <img width="510" height="298" alt="image" src="https://github.com/user-attachments/assets/6df20037-fa62-4ad6-916a-7e099d4ff48f" />
