--- a/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
@@ -61,3 +61,8 @@ ENDFORM.
 **1) function group 생성**
 
 <img width="510" height="298" alt="image" src="https://github.com/user-attachments/assets/6df20037-fa62-4ad6-916a-7e099d4ff48f" />
+</br>
+
+**2) function module 생성**
+
+<img width="531" height="139" alt="image" src="https://github.com/user-attachments/assets/7d3db402-840d-48b9-a41f-804d5947c407" />
