--- a/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
@@ -68,7 +68,7 @@ ENDFORM.
 <img width="531" height="135" alt="image" src="https://github.com/user-attachments/assets/db2e443c-dc3f-4e7f-8a91-4de7d08aca43" />
 </br>
 
-**3) function module 생성**
+**3) importing, exporting, exceptions 표 채우기**
 
 <img width="506" height="98" alt="image" src="https://github.com/user-attachments/assets/093db934-1818-4570-8cb7-ee485303aa09" />
 </br>
