Update 프로그래핑 문법과 로직 (11.20).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
@@ -78,3 +78,28 @@ ENDFORM.
 
 <img width="510" height="119" alt="image" src="https://github.com/user-attachments/assets/bba68691-5626-47db-8631-e231139dab62" />
 </br>
+</br>
+
+**4) function module 코드 수정**
+```abap
+FUNCTION z_bc400_03_comp_percentage.
+*"----------------------------------------------------------------------
+*"*"Local Interface:
+*"  IMPORTING
+*"     REFERENCE(IV_ACT) TYPE  BC400_ACT
+*"     REFERENCE(IV_MAX) TYPE  BC400_MAX
+*"  EXPORTING
+*"     REFERENCE(EV_PERCENTAGE) TYPE  BC400_PERC
+*"  EXCEPTIONS
+*"      DIVISION_BY_ZERO
+*"----------------------------------------------------------------------
+
+  IF iv_max = 0.
+    ev_percentage = 0.
+    RAISE division_by_zero.
+  ELSE.
+
+  ENDIF.
+
+ENDFUNCTION.
+```
