Update 프로그래핑 문법과 로직 (11.20).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
@@ -105,3 +105,108 @@ FUNCTION z_bc400_03_comp_percentage.
 
 ENDFUNCTION.
 ```
+</br>
+</br>
+
+**5) program 코드 수정**
+```abap
+*&---------------------------------------------------------------------*
+*& Report ZBC400_03_COMP
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+REPORT ZBC400_03_COMP.
+
+TYPES tv_result TYPE p LENGTH 16 DECIMALS 2.
+
+PARAMETERS:
+  pa_int1  TYPE i,
+  pa_op    TYPE c LENGTH 1,
+  pa_int2  TYPE i.
+
+DATA gv_result TYPE tv_result.
+
+IF ( pa_op = '+' OR
+     pa_op = '-' OR
+     pa_op = '*' OR
+     pa_op = '/' AND pa_int2 <> 0 OR
+     pa_op = '%' OR
+     pa_op = 'P' ).
+
+  CASE pa_op.
+    WHEN '+'.
+      gv_result = pa_int1 + pa_int2.
+    WHEN '-'.
+      gv_result = pa_int1 - pa_int2.
+    WHEN '*'.
+      gv_result = pa_int1 * pa_int2.
+    WHEN '/'.
+      gv_result = pa_int1 / pa_int2.
+    WHEN '%'.
+      PERFORM calc_percentage
+        USING
+          pa_int1
+          pa_int2
+        CHANGING
+          gv_result.
+
+      CALL FUNCTION 'Z_BC400_03_COMP_PERCENTAGE'
+        EXPORTING
+          iv_act = pa_int1
+          iv_max = pa_int2
+        IMPORTING
+          EV_PERCENTAGE          = gv_result
+        EXCEPTIONS
+          DIVISION_BY_ZERO       = 1
+          OTHERS = 2.
+
+      IF sy-subrc <> 0.
+        MESSAGE 'error!' TYPE 'E'.
+      ENDIF.
+
+    WHEN 'P'.
+      CALL FUNCTION 'BC400_MOS_POWER'
+        EXPORTING
+          iv_base               = pa_int1
+          iv_power              = pa_int2
+        IMPORTING
+          ev_result             = gv_result
+        EXCEPTIONS
+          power_value_too_high  = 1
+          result_value_too_high = 2
+          OTHERS                = 3.
+      CASE sy-subrc.
+        WHEN 0.
+*         no action needed
+        WHEN 1.
+          WRITE 'Max value of power is 4'(mvp).
+        WHEN 2.
+          WRITE 'Result value too high'(rvh).
+        WHEN 3.
+          WRITE 'Unknown error'(uer).
+      ENDCASE.
+  ENDCASE.
+
+  WRITE: 'Result:'(res), gv_result.
+
+ELSEIF  pa_op = '/'  AND  pa_int2 = 0.
+  WRITE: 'No division by zero!'(dbz).
+ELSE.
+  WRITE: 'Invalid operator!'(iop).
+ENDIF.
+
+FORM calc_percentage  USING    pv_act TYPE i
+                               pv_max TYPE i
+                      CHANGING cv_result TYPE tv_result.
+
+*Simple Error Handling
+  IF pv_max = 0.
+    cv_result = 0.
+    WRITE 'Error in percentage calculation'(epc).
+  ELSE.
+*Calculate result
+    cv_result = pv_act / pv_max * 100.
+  ENDIF.
+
+ENDFORM.                    " calc_percentage
+```
