Update 프로그래핑 문법과 로직 (11.20).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
@@ -1,3 +1,15 @@
+## < SE11 ABAP Dictionary에서 정의하는 타입 >
+**1) 데이터필드 (단일 필드 데이터 타입)**
+- 숫자 1개, 문자열 1개 등 값 하나만 저장하는 타입
+```abap
+DATA <변수> TYPE <타입>.
+```
+```abap
+DATA gv_price TYPE p DECIMALS 2.
+DATA gv_name  TYPE char20.
+```
+</br>
+
 ## < ABAP 추가적인 문법 >
 
 
