Update 프로그래핑 문법과 로직 (11.20).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
@@ -2,11 +2,22 @@
 **1) 데이터필드 (단일 필드 데이터 타입)**
 - 숫자 1개, 문자열 1개 등 값 하나만 저장하는 타입
 ```abap
-DATA <변수> TYPE <타입>.
+DATA 변수명 TYPE 데이터타입.
 ```
 ```abap
 DATA gv_price TYPE p DECIMALS 2.
 DATA gv_name  TYPE char20.
+```
+</br>
+
+**2-1) Structure 타입**
+- 여러 개의 필드(컴포넌트)를 묶은 하나의 "작업공간(Work Area)"
+- SE11에서 Structure 로 정의된 타입 사용 가능
+```abap
+DATA 구조체변수명 TYPE 글로벌_구조체명.
+```
+```abap
+DATA gs_flight TYPE bc400_s_flight.
 ```
 </br>
 
