Update 프로그래핑 문법과 로직 (11.20).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
@@ -13,12 +13,14 @@ DATA gv_name  TYPE char20.
 **2-1) Structure 타입**
 - 여러 개의 필드(컴포넌트)를 묶은 하나의 "작업공간(Work Area)"
 - SE11에서 Structure 로 정의된 타입 사용 가능
+- 또는 LOCAL TYPES 로 직접 선언 가능
 ```abap
 DATA 구조체변수명 TYPE 글로벌_구조체명.
 ```
 ```abap
 DATA gs_flight TYPE bc400_s_flight.
 ```
+**2-2) Local Structure 정의 후 사용**
 </br>
 
 ---
