Update 프로그래핑 문법과 로직 (11.20).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
@@ -24,6 +24,26 @@ DATA gs_flight TYPE bc400_s_flight.
 </br>
 
 **2-2) Local Structure 정의 후 사용**
+- 프로그램 안에서만 쓰는 로컬 구조체를 직접 만드는 것
+- SE11(글로벌 타입) 안 쓰고, TYPES 로 구조체를 만들고 DATA 로 변수 생성
+```abap
+TYPES: BEGIN OF 구조체타입명,
+         필드명 TYPE 데이터타입,
+         필드명 TYPE 데이터타입,
+       END OF 구조체타입명.
+
+DATA 구조체변수명 TYPE 구조체타입명.
+```
+```abap
+TYPES: BEGIN OF ts_flight,
+         carrid   TYPE s_carr_id,
+         connid   TYPE s_conn_id,
+         fldate   TYPE s_date,
+       END OF ts_flight.
+
+DATA gs_flight TYPE ts_flight.
+```
+</br>
 </br>
 
 ---
