--- a/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
@@ -50,11 +50,12 @@ DATA gs_flight TYPE ts_flight.
 - `UNIT / QUAN` : 수량과 단위 필드도 항상 짝 맞춰야 함
 - 짝이 맞지 않으면 런타임 에러 발생 가능
 
-<img width="1246" height="447" alt="image" src="https://github.com/user-attachments/assets/9f6cc325-5c64-410a-8e65-19174e36e321" />
+<img width="509" height="183" alt="image" src="https://github.com/user-attachments/assets/322a985b-def8-4c42-b439-837586fc4215" />
 
 </br>
 - currency/quantity 에서 수정해야 함
-<img width="1157" height="445" alt="image" src="https://github.com/user-attachments/assets/4a79e0e8-6026-4042-a4a6-f969569edbdf" />
+![Uploading image.png…]()
+
 
 </br>
 
