Update 프로그래핑 문법과 로직 (11.20).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
@@ -54,8 +54,7 @@ DATA gs_flight TYPE ts_flight.
 
 </br>
 - currency/quantity 에서 수정해야 함
-![Uploading image.png…]()
-
+<img width="510" height="196" alt="image" src="https://github.com/user-attachments/assets/0d875068-b49d-4bc5-916d-7d8c099c26fe" />
 
 </br>
 
