Update 프로그래핑 문법과 로직 (11.20).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
@@ -58,6 +58,16 @@ DATA gs_flight TYPE ts_flight.
 <img width="510" height="196" alt="image" src="https://github.com/user-attachments/assets/0d875068-b49d-4bc5-916d-7d8c099c26fe" />
 
 </br>
+</br>
+
+**3) 테이블 타입 (Internal Table)**
+
+Structure 여러 개를 저장하는 리스트 형태
+
+TYPE TABLE OF 구조체타입
+
+</br>
+</br>
 
 ---
 </br>
