Update 프로그래핑 문법과 로직 (11.20).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
@@ -63,11 +63,31 @@ DATA gs_flight TYPE ts_flight.
 </br>
 
 **3) 테이블 타입 (Internal Table)**
+- Structure 여러 개를 저장하는 리스트 형태
+```abap
+DATA 내부테이블명 TYPE TABLE OF 구조체타입명.
+DATA 작업영역명   TYPE 구조체타입명.
+```
+```abap
+DATA gt_flight TYPE TABLE OF ts_flight.
+DATA gs_flight TYPE ts_flight.
+```
+</br>
+</br>
 
-Structure 여러 개를 저장하는 리스트 형태
+**4) MOVE-CORRESPONDING**
+- 구조체/테이블 간 필드 이름이 같은 것만 복사
+- MOVE와 달리 필드 위치 상관없이 안전하게 매핑
+- MOVE 하면 필드 위치 기준으로 메모리 그대로 복사되므로, 이름이 달라서 값이 엉뚱한 곳에 들어갈 수 있음.
+```abap
+MOVE-CORRESPONDING 원본변수 TO 대상변수.
+```
+```abap
+DATA gs_flight    TYPE zsflight_b03.
+DATA gs_b_flight  TYPE bc400_s_flight.
 
-TYPE TABLE OF 구조체타입
-
+MOVE-CORRESPONDING gs_flight TO gs_b_flight.
+```
 </br>
 </br>
 
