Update 프로그래핑 문법과 로직 (11.20).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
@@ -78,7 +78,7 @@ DATA gs_flight TYPE ts_flight.
 **4) MOVE-CORRESPONDING**
 - 구조체/테이블 간 필드 이름이 같은 것만 복사
 - MOVE와 달리 필드 위치 상관없이 안전하게 매핑
-- MOVE 하면 필드 위치 기준으로 메모리 그대로 복사되므로, 이름이 달라서 값이 엉뚱한 곳에 들어갈 수 있음.
+- `MOVE` → 메모리 구조 그대로 복사 (위험), `MOVE-CORRESPONDING` → 동일 이름 필드만 안전하게 복사
 ```abap
 MOVE-CORRESPONDING 원본변수 TO 대상변수.
 ```
