Update 프로그래핑 문법과 로직 (11.20).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
@@ -88,6 +88,7 @@ DATA gs_b_flight  TYPE bc400_s_flight.
 
 MOVE-CORRESPONDING gs_flight TO gs_b_flight.
 ```
+
 </br>
 </br>
 
@@ -311,3 +312,21 @@ ENDFORM.                    " calc_percentage
 </br>
 
 - 실습 3
+**1) 글로벌 구조체 타입(SE11 Structure)을 이용해 Work Area 생성**
+```abap
+" Structure: 여러개의 컴포넌트로 구성된 Work Area (작업공간)
+" Global data type을 사용하여 structure 변수 생성
+DATA: gs_data   TYPE bc400_s_flight,
+      gs_data2  LIKE gs_data,
+      gs_flight TYPE zsflight_b03,
+      gs_scarr  TYPE zscarr_b03.
+
+gs_scarr-carrid = 'AA'.
+gs_scarr-carrname = 'Hello'.
+gs_scarr-currcode = 'KRW'.
+gs_scarr-url = 'www.naver.com'.    " 하나의 structure에 데이터를 넣음
+
+WRITE:/ gs_scarr-carrid,
+      / gs_scarr-carrname.
+```
+</br>
