Update 프로그래핑 문법과 로직 (11.20).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
@@ -312,6 +312,7 @@ ENDFORM.                    " calc_percentage
 </br>
 
 - 실습 3
+- Structure 이용
   
 **1) 글로벌 구조체 타입(SE11 Structure)을 이용해 Work Area 생성**
 ```abap
