--- a/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
@@ -75,7 +75,19 @@ DATA gs_flight TYPE ts_flight.
 </br>
 </br>
 
-**4) MOVE-CORRESPONDING**
+**4) DB Table 기반 구조체**
+- SE11에서 정의된 Transparent Table을 기준으로 변수를 만들면
+  - `DATA gs_scarr TYPE scarr.` → 구조체 (Work Area, 테이블 한 행)
+  - `DATA gv_carrid TYPE scarr-carrid.` → 단일 필드 (Work Area 아님)
+- 테이블 컬럼이 그대로 구조체 필드로 생성됨
+```abap
+DATA gs_scarr TYPE scarr.       " 구조체: 테이블 한 행을 담음
+DATA gv_carrid TYPE scarr-carrid. " 단일 필드
+```
+</br>
+</br>
+
+**5) MOVE-CORRESPONDING**
 - 구조체/테이블 간 필드 이름이 같은 것만 복사
 - MOVE와 달리 필드 위치 상관없이 안전하게 매핑
 - `MOVE` → 메모리 구조 그대로 복사 (위험), `MOVE-CORRESPONDING` → 동일 이름 필드만 안전하게 복사
@@ -318,6 +330,7 @@ ENDFORM.                    " calc_percentage
 ```abap
 " Structure: 여러개의 컴포넌트로 구성된 Work Area (작업공간)
 " Global data type을 사용하여 structure 변수 생성
+
 DATA: gs_data   TYPE bc400_s_flight,
       gs_data2  LIKE gs_data,
       gs_flight TYPE zsflight_b03,
@@ -332,3 +345,25 @@ WRITE:/ gs_scarr-carrid,
       / gs_scarr-carrname.
 ```
 </br>
+
+**2) 프로그램 내에서만 사용하는 로컬 구조체 선언 + Work Area 생성**
+```abap
+* Local type structure
+TYPES: BEGIN OF ts_flight,
+          CARRID TYPE S_CARR_ID,
+          CONNID TYPE S_CONN_ID,
+          FLDATE TYPE S_DATE,
+          CITYFROM TYPE S_FROM_CIT,
+          CITYTO TYPE S_TO_CITY,
+       END OF ts_flight.
+
+DATA: gs_flight TYPE ts_flight.
+
+gs_flight-carrid = 'AA'.
+gs_flight-connid = '0017'.
+
+WRITE:/ gs_flight-carrid,
+      / gs_flight-connid.
+```
+</br>
+
