Update 프로그래핑 문법과 로직 (11.20).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
@@ -45,7 +45,30 @@ DATA gs_flight TYPE ts_flight.
 ```
 </br>
 
-**2-3) CUKY / CURR, UNIT / QUAN 주의**
+**2-3) Local Structure + INCLUDE TYPE (구조체 확장)**
+- 기존 글로벌 Structure를 포함하고, 프로그램 전용 필드를 추가하여 로컬 구조체 확장
+```abap
+DATA: BEGIN OF <로컬구조체변수명>,
+        INCLUDE TYPE <글로벌Structure명>,
+        <추가필드명1> TYPE <데이터타입>,
+        <추가필드명2> TYPE <데이터타입>,
+      END OF <로컬구조체변수명>.
+```
+```abap
+DATA: BEGIN OF gs_flight,
+        INCLUDE TYPE BC400_S_FLIGHT,  " 글로벌 Structure 포함
+        custom1 TYPE CHAR1,
+        custom2 TYPE CHAR1,
+      END OF gs_flight.
+
+gs_flight-carrid = 'AA'.       " 글로벌 필드
+gs_flight-custom1 = 'X'.       " 로컬 필드
+
+WRITE: / gs_flight-carrid, / gs_flight-custom1.
+```
+</br>
+
+**2-4) CUKY / CURR, UNIT / QUAN 주의**
 - `CUKY / CURR` : 금액과 통화키 필드는 항상 짝
 - `UNIT / QUAN` : 수량과 단위 필드도 항상 짝 맞춰야 함
 - 짝이 맞지 않으면 런타임 에러 발생 가능
@@ -367,3 +390,49 @@ WRITE:/ gs_flight-carrid,
 ```
 </br>
 
+**3) 글로벌 Structure를 가져와 로컬 필드를 추가한 구조체 만들기**
+```abap
+* DB Table을 가지고 변수 생성 시 Structure 타입의 변수가 됨.
+* => 구조체를 가지고 만든 것이기 때문
+
+**********************************************************************
+
+* 기존 global structure 에다가 custom component 추가하여
+* Local Structure 생성
+
+DATA: BEGIN OF gs_flight.
+  INCLUDE TYPE BC400_S_FLIGHT.
+DATA: custom TYPE CHAR1,
+      custom2 TYPE CHAR1,
+      END OF gs_flight.
+
+BREAK-POINT.
+
+WRITE: 'okok'.
+```
+</br>
+
+**4) 최종 실습**
+```abap
+* 1단계
+DATA: gs_flight TYPE ZSFLIGHT_B03.
+gs_flight-carrid = 'AA'.
+gs_flight-connid = '0017'.
+gs_flight-fldate = sy-datum.
+gs_flight-cityfrom = 'Incheon'.
+gs_flight-cityto = 'Seoul'.
+
+WRITE:/ gs_flight-carrid,
+      / gs_flight-connid,
+      / gs_flight-fldate,
+      / gs_flight-cityfrom,
+      / gs_flight-cityto.
+
+** 2단계
+DATA: gs_b_flight TYPE BC400_S_FLIGHT.
+MOVE-CORRESPONDING gs_flight TO gs_b_flight.
+
+WRITE:/ gs_b_flight-carrid,
+      / gs_b_flight-connid,
+      / gs_b_flight-fldate.
+```
