--- a/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.19).md
@@ -98,6 +98,8 @@ ENDFORM.
 - SE37 (Function Builder): SAP에서 Function Module을 생성, 수정, 테스트할 수 있는 트랜잭션 코드.
 - Function Module(FM) 은 Function Group(FG) 안에 소속됨.
 - Function Group = 하나의 프로그램처럼 동작.
+- Function Module 가져올 때 끌어오거나 pattern 클릭 후 가져올 수 있음
+  </br>
   
 - FG 내부 변수들은 FG 안의 Function Module끼리만 접근 가능, 일반 ABAP 프로그램에서는 직접 접근 불가
   - FM의 파라미터(interface)를 통해서만 값 전달·수정 가능.
